[package]
name = "powerplay-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
powerplay = { package = "powerplay", path = ".." }
parachain = { package = "powerplay-parachain", path = "../" }
collator = { package = "powerplay-collator", path = "../collator" }
primitives = { package = "powerplay-primitives", path = "../primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
client-api = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "master" }
parking_lot = "0.10.0"
codec = { package = "parity-scale-codec", version = "1.2.0" }
futures = "0.3.4"
